# mozjpeg-oxide

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENTROPY_OPTIMIZATION_NOTES.md  LICENSE  OPTIMIZE_SCANS_PARITY.md  README.md  SAFETY_REVIEW.md  SIMD_SPEEDUP_NOTES.md  SIMD_TRACKING.md
.cargo/: config.toml
benches/: color.rs  dct.rs  encode.rs  entropy.rs
benchmark/: Dockerfile.perf  README.md  plot_pareto.py
docs/: SCAN_OPTIMIZATION_PLAN.md
examples/: bench_entropy.rs  benchmark_corpus.rs  compare_ac_refine.rs  compare_color_precision.rs  compare_huffman.rs  compare_outputs.rs  compare_real_images.rs  compare_scan_configs.rs  comprehensive_benchmark.rs  comprehensive_comparison.rs  debug_color_avx2.rs  debug_data26.rs  debug_dct.rs  debug_decode.rs  debug_full_dct.rs  debug_rust_vs_c.rs  decoder_boundary_detail.rs  decoder_boundary_test.rs  decoder_chroma_analysis.rs  decoder_roundtrip.rs  deringing_gap_test.rs  encode_permutations.rs  exhaustive_parity.rs  force_al1_test.rs  force_sa.rs  full_corpus_test.rs  full_quality_comparison.rs  kodak_full_comparison.rs  non_trellis_gap.rs  opt_scans_test.rs  optimize_scans_debug.rs  pareto_benchmark.rs  profile_baseline.rs  profile_c_baseline.rs  profile_compare.rs  profile_dct.rs  profile_entropy.rs  prog_test.rs  quality_metrics_comparison.rs  quant_ffi_compare.rs  (+15 more)
mozjpeg/: Cargo.toml
mozjpeg-oxide/: Cargo.toml  README.md
mozjpeg-oxide/examples/: benchmark.rs  benchmark_corpus.rs  compare_c_rust.rs  compare_real_images.rs  debug_rust_vs_c.rs  encode_permutations.rs  investigate_pixel_diff.rs  test_444.rs  test_block_compare.rs  test_debug_symbols.rs
mozjpeg-oxide/src/: corpus.rs  deringing.rs  encode.rs  lib.rs  quant.rs
mozjpeg-oxide/tests/: codec_comparison.rs  encoder_validation.rs  ffi_comparison.rs  ffi_validation.rs
mozjpeg-sys/: Cargo.toml  build.rs
mozjpeg-sys/src/: lib.rs
mozjpeg/benches/: encode.rs
mozjpeg/examples/: benchmark.rs  benchmark_corpus.rs  compare_huffman.rs  compare_outputs.rs  compare_real_images.rs  investigate_pixel_diff.rs  test_444.rs  test_block_compare.rs  test_debug_symbols.rs  test_dump_blocks.rs  test_edge_cropping.rs  test_no_trellis.rs
mozjpeg/src/: bitstream.rs  corpus.rs  dct.rs  deringing.rs  encode.rs  entropy.rs  error.rs  huffman.rs  lib.rs  progressive.rs  quant.rs  test_encoder.rs  trellis.rs  types.rs
mozjpeg/tests/: codec_comparison.rs  corpus_validation.rs  ffi_comparison.rs  ffi_validation.rs
scripts/: fetch-corpus.sh  setup-instrumented-mozjpeg.sh  test-all.sh
src/: bitstream.rs  color.rs  color_avx2.rs  compat.rs  consts.rs  corpus.rs  dct.rs  deringing.rs  encode.rs  entropy.rs  error.rs  fast_entropy.rs  huffman.rs  lib.rs  marker.rs  progressive.rs  quant.rs  sample.rs  scan_optimize.rs  scan_trial.rs  test_encoder.rs  trellis.rs  types.rs
tests/: bench_2k.rs  benchmark_runner.rs  block_comparison.rs  codec_comparison.rs  corpus_comparison.rs  corpus_validation.rs  edge_cropping.rs  edge_padding.rs  encode_tests.rs  encoder_validation.rs  ffi_comparison.rs  ffi_validation.rs  known_issues.rs  parity_tests.rs  pixel_diff_analysis.rs  progressive_comparison.rs  q95_final_comparison.rs  scan_verification.rs  subsampling_444.rs  timing_breakdown.rs  trellis_validation.rs
(+28 files in other folders)
