[package]
name = "mozjpeg-oxide"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust JPEG encoder based on Mozilla's mozjpeg with trellis quantization"
homepage = "https://github.com/imazen/mozjpeg-oxide"
documentation = "https://docs.rs/mozjpeg-oxide"
readme = "README.md"
keywords = ["jpeg", "encoder", "mozjpeg", "compression", "image"]
categories = ["encoding", "multimedia::images"]

[features]
default = []
simd = []
# Enable PNG loading in corpus module (enabled by default in dev)
png = ["dep:png"]

[dependencies]
bytemuck = { workspace = true }
# Optional PNG support for corpus loading
png = { workspace = true, optional = true }

[dev-dependencies]
dssim = { workspace = true }
rgb = { workspace = true }
ssimulacra2 = { workspace = true }
png = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
jpeg-decoder = { workspace = true }
libc = "0.2"
# Use existing mozjpeg-sys from crates.io for basic FFI validation
mozjpeg-sys = "2.2"
# Codec testing infrastructure from https://github.com/imazen/codec-comparison
codec-eval = { git = "https://github.com/imazen/codec-comparison" }
# Local mozjpeg-sys with granular test exports (for FFI comparison tests)
mozjpeg-sys-local = { path = "../mozjpeg-sys" }

[[bench]]
name = "encode"
harness = false
