[package]
name = "mozjpeg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust port of Mozilla's mozjpeg JPEG encoder with trellis quantization"

[features]
default = []
simd = []

[dependencies]
bytemuck = { workspace = true }

[dev-dependencies]
dssim = { workspace = true }
ssimulacra2 = { workspace = true }
png = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
jpeg-decoder = { workspace = true }
# Use existing mozjpeg-sys from crates.io for basic FFI validation
mozjpeg-sys = "2.2"

[[bench]]
name = "encode"
harness = false
